--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.7",
